kubernetes-configurations/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: events-api
  name: events-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-api
  strategy: {}
  template:
    metadata:
      labels:
        app: events-api
    spec:
      serviceAccountName: events-api
      containers:
      - image: drehnstrom/events-api:v2.0
        name: events-api
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8082
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.2"
        livenessProbe:
          httpGet:
            path: /version
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 2
status: {}
