kubernetes-configurations/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: events-web
  name: events-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: events-web
  strategy: {}
  template:
    metadata:
      labels:
        app: events-web
    spec:
      containers:
      - image: drehnstrom/events-web:v2.0
        name: events-web
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.2"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 2
status: {}
