kubernetes-configurations/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: events-web
  name: events-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: events-web
  type: LoadBalancer
status:
  loadBalancer: {}
